# WhaToDo

./: README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_25_1505-2a18889aaeee_initial_migration_create_movie_table.py  2025_07_25_2148-b22a973b71f4_change_movie_table.py  2025_07_28_0003-1027af557043_create_tables.py  2025_07_28_0152-188deab7cf5e_create_ratings_table.py  2025_07_29_0014-94046d42eaef_create_table.py  2025_07_29_0152-ea414e11a4bc_change_sites_table.py  2025_08_01_1035-d24b24e267cc_create_image_paths_table.py
backend/api/: __init__.py
backend/api/images/: crud.py  views.py
backend/api/movies/: crud.py  dependencies.py  utils.py  views.py
backend/api/ratings/: crud.py  views.py
backend/api/sites/: crud.py  dependencies.py  views.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  db_helper.py  image_path.py  movie.py  rating.py  site.py
backend/core/models/mixins/: __init__.py  id_int_pk_mixin.py  movie_relation_mixin.py
backend/core/schemas/: images.py  movies.py  ratings.py  sites.py
frontend/: Dockerfile  index.html  jsconfig.json  main.js  main.jsx  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/app/styles/: globals.css
frontend/src/pages/: Home.jsx  Movie.jsx  Movies.jsx
frontend/src/widgets/GroupsCard/: GroupReCa_3.jsx  GroupReCa_3.module.css
frontend/src/widgets/HeroBanner/: HeroBanner.jsx  (+1 more)
frontend/static/css/: common.css  style.css
(+18 files in other folders)
